# wavepropagation

./: README.md  pyproject.toml
exemples/: simpleSetup.py
src/wavepropagation/: JonesCalculus.py  __init__.py  analyzing.py  elements.py  field.py  grid.py  opticalSystem.py  propagate.py  sources.py  spectrum.py  visualizing.py
src/wavepropagation/examples/: besselBeamSpectralFFT.py  rgbPlotting.py
src/wavepropagation/tests/: test_JonesCalculus.py
